--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -7487,10 +7487,10 @@
 "~^/item\?id=18675280.*$" "https://news.ycombinator.com/item?id=18675280";
 "~^/item\?id=18708876.*$" "https://news.ycombinator.com/item?id=18708876";
 "~^/item\?id=20366039.*$" "https://news.ycombinator.com/item?id=20366039";
-"~^/nitter.hu$" "https://nitter.net/";
-"~^/noamchomskyT/status/952716484123529216$" "https://nitter.net/noamchomskyt/status/952716484123529216";
-"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://nitter.net/search-advanced?lang=en";
-"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://nitter.net/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
+"~^/nitter.hu$" "https://nitter.moomoo.me/";
+"~^/noamchomskyT/status/952716484123529216$" "https://nitter.moomoo.me/noamchomskyt/status/952716484123529216";
+"~^/https://nitter.hu/search-advanced?lang=en.*$" "https://nitter.moomoo.me/search-advanced?lang=en";
+"~^/https://nitter.hu/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd.*$" "https://nitter.moomoo.me/search?f=tweets&vertical=default&q=%23icanhazpdf&src=typd";
 "~^/noahpinionblog.blogspot.com/2013/03/stimulus-tools-policy-vs-politics.html.*$" "https://noahpinionblog.blogspot.com/2013/03/stimulus-tools-policy-vs-politics.html";
 "~^/search\?hl\=en\&q=henry\+darger.*$" "https://nostalgebraist.livejournal.com/68532.html";
 "~^/ttft/print/TTFT\.pdf$" "https://numinous.productions/ttft/print/TTFT.pdf";
@@ -9818,7 +9818,6 @@
 "~^/Modafinil.*$" "/modafinil";
 "~^/Spaced.*$" "/spaced-repetition";
 "~^/doc/reinforcement$" "/doc/reinforcement-learning/index";
-
 "~^/A-B-testing.*$" "/ab-test";
 "~^/CHANGELOG.txt.*$" "/changelog";
 "~^/README.page.*$" "/index";
@@ -9846,7 +9845,7 @@
 "~^/doc/iq/2016-makel.pdf.*$" "/doc/iq/high/smpy/2016-makel.pdf";
 "~^/genetics$" "/doc/genetics/index";
 "~^/micrododing.*$" "/lsd-microdosing";
-"~/gpt3$" "/gpt-3";
+"~^/gpt3$" "/gpt-3";
 "~^/index.atom.*$" "https://gwern.substack.com/feed";
 "~^/About.git.*$" "/about.page";
 "~^/doc/statistics/1972-savage-foundationsofstatistics.pdf.*$" "/doc/statistics/decision/1972-savage-foundationsofstatistics.pdf";
