+; also standardize on '§' instead of '<strong>Section</strong>'

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5056,3 +5056,5 @@ default "";
 "~^/static/img/icon/google.svg$" "/static/img/icon/alphabet.svg";
 "~^/doc/philosophy/mind/2020-schwitzgebel.pdf.*$" "/doc/philosophy/mind/2000-schwitzgebel.pdf";
 "~^/doc/ai/anime/2022-gao.pdf.*$" "/doc/ai/anime/danbooru/2022-gao.pdf";
+"~^/doc/iq/2020-zissman.pdf.*$" "/doc/iq/ses/2020-zissman.pdf";
+"~^/tanks$" "/tank";
