--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8861,7 +8861,7 @@
 "~^/Spaced-repetitionliterature-review.*$" "/Spaced-repetition#literature-review";
 "~^/Spaced-repetitionmotor-skills.*$" "/Spaced-repetition#motor-skills";
 "~^/Spaced-repetitionoverload.*$" "/Spaced-repetition#overload";
-"~^/spaced-repetition.page$" "/Spaced-repetition.page";
+"~^/Spaced-repetition.page$" "/spaced-repetition.page";
 "~^/Spaced-repetitionpopularity.*$" "/Spaced-repetition#popularity";
 "~^/Spaced-repetitionprospects-extended-flashcards.*$" "/Spaced-repetition#prospects-extended-flashcards";
 "~^/Spaced-repetitionreview-summary.*$" "/Spaced-repetition#review-summary";
@@ -9851,6 +9851,83 @@
 "~^/doc/statistics/1972-savage-foundationsofstatistics.pdf.*$" "/doc/statistics/decision/1972-savage-foundationsofstatistics.pdf";
 "~^/doc/.*/[Ii]somorphism.*$" "/isomorphism";
 "~^/TWDNE.*か.*$" "/twdne";
+"~^/doc/psycholgoy/okcupid/the4bigmythsofprofilepicture.html.*$" "/doc/psychology/okcupid/the4bigmythsofprofilepicture.html";
+"~^/DALLE-avatar.*$" "/DALL-E";
+"~^/DALL-E-mini.*$" "https://wandb.ai/dalle-mini/dalle-mini/reports/DALL-E-mini--Vmlldzo4NjIxODA";
+"~^/doc/psychiatry/2022-skaug.pdfm.*$" "/doc/psychiatry/2022-skaug.pdf";
+"~^/doc/1989-glover.pdf.*$" "/doc/psychology/spaced-repetition/1989-glover.pdf";
+"~^/doc/ig/2015-strenze.pdf.*$" "/doc/iq/2015-strenze.pdf";
+"~^/doc/psycholgoy/okcupid/the4bigmythsofprofilepictures.html.*$" "/doc/psychology/okcupid/the4bigmythsofprofilepictures.html";
+"~^/forum$" "https://www.datasecretslox.com/";
+"~^/littlewood-orgin.*$" "/littlewood-origin";
+"~^/DALL-E-2.*$" "https://openai.com/dall-e-2/";
+"~^/DALL-E。.*$" "https://openai.com/blog/dall-e/";
+"~^/Danbooru202$" "/danbooru";
+"~^/Danbooru2021/index.html.*$" "/danbooru2021";
+"~^/fiction/clipp$" "/fiction/clippy";
+"~^/fiction/Clippy.*$" "/fiction/clippy";
+"~^/tdwne.*$" "/twdne";
+"~^/doc/1989-burger.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1989-burger.pdf";
+"~^/overview$" "/index";
+"~^/Black-Market-archives.*$" "/dnm-archive";
+"~^/doc/iq/1941-thurstone-factorialstudiesofintel$" "/doc/iq/1941-thurstone-factorialstudiesofintelligence.pdf";
+"~^/doc/darknet-market/2013-06-07-namedeclined-profile$" "/doc/darknet-market/silk-road/1/2013-06-07-namedeclined-profile.html";
+"~^/doc/anime/eva/2002-t$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/review/Books.*$" "/review/book";
+"~^/doc/psychology/2019-letexier$" "/doc/psychology/2019-letexier.pdf";
+"~^/doc/2002-klauer.pdf.*$" "/doc/dual-n-back/2002-klauer.pdf";
+"~^/otrs$" "http://otrs-wiki.wikimedia.org/wiki/";
+"~^/38ffb158.pdfGPT.*$" "https://s3-us-west-2.amazonaws.com/openai-assets/research-covers/language-unsupervised/language_understanding_paper.pdf#page=5";
+"~^/Fake-Journal-Club.*$" "/fake-journal-club";
+"~^/Startup-ideas.*$" "/startup-ideas";
+"~^/doc/1996-animerica-conscience-otaking.*$" "/doc/anime/eva/1996-animerica-conscience";
+"~^/doc/2002-notenki.*$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/doc/2004-wicherts.pdf.*$" "/doc/iq/2004-wicherts.pdf";
+"~^/doc/psychology/vision/www.elsevier.com/locate/cortex.*$" "https://www.sciencedirect.com/journal/cortex";
+"~^/faces.page$" "/face.page";
+"~^/Modus$" "/modus";
+"~^/Silk+Road.*$" "/silk-road";
+"~^/doc/csl$" "/doc/cs/linkrot/index";
+"~^/doc/ia/2015-strenze.pdf.*$" "/doc/iq/2015-strenze.pdf";
+"~^/doc/ig/2015-strenze.qdf.*$" "/doc/iq/2015-strenze.pdf";
+"~^/doc/ig/2015-streze.pdf.*$" "/doc/iq/2015-strenze.pdf";
+"~^/doc/in/2015-strenze.pdf.*$" "/doc/iq/2015-strenze.pdf";
+"~^/doc/psychology/vision/www.sciencedirect.com/science/journal/00109452.*$" "https://www.sciencedirect.com/journal/cortex";
+"~^/doc/statistics/1957-savage.pdf.*$" "/doc/statistics/decision/1957-savage.pdf";
+"~^/doc/darknet-markets$" "/doc/darknet-markets/index";
+"~^/aib$" "https://aibooru.online/";
+"~^/modafinal.*$" "/modafinil";
+"~^/review/books$" "/review/book";
+"~^/doc/cs/hardware/favicon.ico.*$" "/static/img/favicon.png";
+"~^/Bitcoin-is-Worse-is-Better.*$" "/bitcoin-is-worse-is-better";
+"~^/Complexity-vs-AI.*$" "/complexity-vs-ai";
+"~^/Drug-heuristics.*$" "/drug-heuristic";
+"~^/Faces/.*$" "/face";
+"~^/Greenland.*$" "/greenland";
+"~^/Holy-Wars.*$" "/holy-war";
+"~^/Justifications.*$" "/justification";
+"~^/Melatonin.*$" "/melatonin";
+"~^/Self-decrypting-files.*$" "/self-decrypting-file";
+"~^/Wikipedia-And-Other-Wikis.*$" "/wikipedia-and-other-wikis";
+"~^/doc/1988-armstrong.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1988-armstrong.pdf";
+"~^/doc/2010-bates.pdf.*$" "/doc/cs/hardware/2010-bates.pdf";
+"~^/doc/2016-beach.pdf.*$" "/doc/economics/2016-beach.pdf";
+"~^/doc/anime/2009-anonymous-deathnotescript..pdf.*$" "/doc/anime/2009-anonymous-deathnotescript.pdf";
+"~^/doc/borges/1939-borges$" "/doc/borges/1939-borges-thetotallibrary.pdf";
+"~^/doc/genetics/2015-proto.pdf.*$" "/doc/genetics/selection/2015-proto.pdf";
+"~^/doc/iq/1981-bouchard.pd%5Cf.*$" "/doc/iq/1981-bouchard.pdf";
+"~^/doc/modafinil/1994-de-s%C3%83%C2%A9r%C3%83%C2%A9ville.pdf.*$" "/doc/modafinil/1994-desereville.pdf";
+"~^/doc/statistics/1957-bellman-dynamicprogrammer.pdf.*$" "/doc/statistics/decision/1957-bellman-dynamicprogramming.pdf";
+"~^/docs$" "/doc/index";
+"~^/.*/conscientiousness-and-online-education.*$" "/conscientiousness-and-online-education";
+"~^/.*/haskell/summer-of-code.*$" "/haskell/summer-of-code";
+"~^/science$" "/doc/science";
+"~^/static/build/paragraph.hs.html.*$" "/static/build/Paragraph.hs.html";
+"~^/technology$" "/doc/technology";
+"~^/doc/genetics/2017-scheufele.pdf.*$" "/doc/genetics/editing/2017-scheufele.pdf";
+"~^/doc/1995-loeb.pdf.*$" "/doc/philosophy/ethics/1995-loeb.pdf";
+"~^/GPT$" "/gpt-3";
+"~^/GPT-3Questions.*$" "/gpt-3";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14765,7 +14842,7 @@
 "~^/.*\)\.reduce\(function\(.*$" "/static/404";
 "~^/tomcat/.*$" "/static/404";
 "~^/.*/srcset$" "/static/404";
-"~^/.*htpassw.*d.*$" "/static/404"; # htpasswd
+"~^/.*passwd.*$" "/static/404";
 "~^/slr/.*$" "/static/404";
 "~^/security.yml.*$" "/static/404";
 "~^/redoc.*$" "/static/404";
@@ -14913,6 +14990,59 @@
 "~^/.*web---copy.*$" "/static/404";
 "~^/free_time..*$" "/static/404";
 "~^/static/template/include/[a-z]\.tmpl$" "/static/404";
+"~^/css_parser.ph.*$" "/static/404";
+"~^/service.jsp.*$" "/static/404";
+"~^/stats.php.*$" "/static/404";
+"~^/.drone.*$" "/static/404";
+"~^/run.*$" "/static/404";
+"~^/weblogic..*$" "/static/404";
+"~^/WEB-INF/.*$" "/static/404";
+"~^/default.conf.*$" "/static/404";
+"~^/bin/.*$" "/static/404";
+"~^/.*querybuilder.*$" "/static/404";
+"~^/.*DesktopModules.*$" "/static/404";
+"~^/.*RadEditorProvider/.*$" "/static/404";
+"~^/.*telerik.*$" "/static/404";
+"~^/.*data:application/javascript;base64.*$" "/static/404";
+"~^/.*data:application/x-javascript.*$" "/static/404";
+"~^/.*web-inf-.*$" "/static/404";
+"~^/.*jboss-web\..*$" "/static/404";
+"~^/.*data:image/gif;base64.*$" "/static/404";
+"~^/.*%20+%20url%20+%20.*$" "/static/404";
+"~^/.*www.googletagservices.com.*$" "/static/404";
+"~^/.*https:%5C/%5C/wordpress.com%5C/read%5C%22.*$" "/static/404";
+"~^/.*wordpress.com%5C/log-in.*$" "/static/404";
+"~^/.*%22sms:\?body\=.*$" "/static/404";
+"~^/.*config\.amazonURL.*$" "/static/404";
+"~^/.*config\.logoImageURL.*$" "/static/404";
+"~^/.*config\.goButtonURL.*$" "/static/404";
+"~^/.*/%22https://www.youtube.com/watch\?v=.*$"  "/static/404";
+"~^/.*/tiki-ajax_services.*$"  "/static/404";
+"~^/+CSCOT+/.*$"  "/static/404";
+"~^/console.*$"  "/static/404";
+"~^/concat?/.*$"  "/static/404";
+"~^/cloudexp/.*$"  "/static/404";
+"~^/ccversion/.*$"  "/static/404";
+"~^/_cat.*$"  "/static/404";
+"~^/authorization.do.*$"  "/static/404";
+"~^/auth.html.*$"  "/static/404";
+"~^/AsiCommon/.*$"  "/static/404";
+"~^/App_Master/.*$"  "/static/404";
+"~^/apache.conf.*$"  "/static/404";
+"~^/ADSearch.cc.*$"  "/static/404";
+"~^/acs/.*$"  "/static/404";
+"~^/account.*$"  "/static/404";
+"~^/mcc/.*$"  "/static/404";
+"~^/.*/login.zul.*$"  "/static/404";
+"~^/.*/win.ini.*$"  "/static/404";
+"~^/.*/WEB-INF/.*$"  "/static/404";
+"~^/.*/web.xml.*$"  "/static/404";
+"~^/.*/weblogic.xml.*$"  "/static/404";
+"~^/.*/portlet.xml.*$"  "/static/404";
+"~^/.*Jenkinsfile.*$"  "/static/404";
+"~^/.*/ghost/.*$"  "/static/404";
+"~^/.*httptrace.*$"  "/static/404";
+"~^/.*host\.key.*$"  "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
