--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10032,6 +10032,7 @@
 # /doc/ai/nn/sampling/index
 # /doc/2009-anonymous-deathnotescript.pdf
 # /doc/1996-nelson.pdf
+"~^/doc/co2/1969-walmsley.pdf.*$" "/doc/co2/1969-wamsley.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
