--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5058,3 +5058,4 @@ default "";
 "~^/doc/ai/anime/2022-gao.pdf.*$" "/doc/ai/anime/danbooru/2022-gao.pdf";
 "~^/doc/iq/2020-zissman.pdf.*$" "/doc/iq/ses/2020-zissman.pdf";
 "~^/tanks$" "/tank";
+"~^/doc/ai/nn/adversarial/2019-bashivan.pdf.*$" "/doc/ai/nn/adversarial/human/2019-bashivan.pdf";
