--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8874,7 +8874,7 @@
 "~^/Spaced-repetitionwhen-to-review.*$" "/spaced-repetition#when-to-review";
 "~^/Spaced-repetitionwhere-was-i-going-with-this.*$" "/spaced-repetition#where-was-i-going-with-this";
 "~^/doc/www/spectrum.ieee.org/embed/index.html$" "/spectrum.ieee.org/embed/index.html";
-"~^/[Ii]deas?$" "/startup-ideas";
+"~^/[Ii]deas$" "/idea";
 "~^/Startumis$" "/startup-ideas#miscellaneous";
 "~^/Startup-idea.page.*$" "/startup-idea.page";
 "~^/static/%BF$" "/static/";
@@ -10000,39 +10000,86 @@
 "~^/static/markdown-footnote-length.hs.*$" "/static/build/markdown-footnote-length.hs";
 "~^/transclude.js.*$" "/static/js/transclude.js";
 "~^/.*/review/tea.*$" "/review/tea";
-# /Turing-complete/
-# /sr/2013-power
-# /sociology/1987-rossi
-# /sitemap.txt
-# /robot.text
-# /Questions?utm_source=RSS
-# /Prediction
-# /power-of-defaults
-# /Mugg
-# /haskell/haskell/Wikipedia-Archive-Bot
-# /GPT-3?
-# /gpt-2-sampling
-# /fiction/The-Mulberry-Tree?revision=20120325151656-f7719-41c3ec03bfcf8f3c4ef8845667653115bd1b3871
-# /doc/statistics/prediction/favicon.ico
-# /doc/statistics/1961-raiffa-appliedstatisticaldecisiontheory.pdf
-# /doc/spacedrepet
-# /doc/rotten.com/library/conspiracy/jasons/Against-The-Miletians
-# /doc/psychology/newsletter/
-# /doc/personal/2011-gwern-yourmorals.org/current_events_process
-# /doc/-melatonin/2014-boergers.pdf
-# /doc/genetics/heritable/1984-buss
-# /doc/genetics/2017-owers.pdf
-# /doc/genetics/2017-cohen.pdf
-# /doc/genetics/2016-sekar.pdf
-# /doc/genetics/2016-day.pdf
-# /doc/genetics/2014-arnedo.pdf
-# /doc/dnb/2007-mccmorris-1.pdf
-# /doc/dnb/2007-kyzas.pdf
-# /doc/culture/2010-d
-# /doc/ai/nn/sampling/index
-# /doc/2009-anonymous-deathnotescript.pdf
-# /doc/1996-nelson.pdf
 "~^/doc/co2/1969-walmsley.pdf.*$" "/doc/co2/1969-wamsley.pdf";
+"~^/doc/cs/2021.ranganathan.pdf.*$" "/doc/cs/2021-ranganathan.pdf";
+"~^/embryo-selectiona.*$" "/embryo-selection";
+"~^/GPT-2-poetry.*$" "gpt-2";
+"~^/Red\?.*$" "/red";
+"~^/Resources$" "/index";
+"~^/Turing-complete/$" "/turing-complete";
+"~^/sr/2013-power.*$" "/doc/darknet-market/silk-road/1/2013-power";
+"~^/sociology/1987-rossi.*$" "/doc/sociology/1987-rossi";
+"~^/sitemap.txt.*$" "/sitemap.xml";
+"~^/robot.text.*$" "robots.txt";
+"~^/Questions\?.*$" "/questions";
+"~^/Prediction$" "/predictio-market";
+"~^/Mugg$" "/mugging";
+"~^/haskell/haskell/Wikipedia-Archive-Bot.*$" "/haskell/Wikipedia-Archive-Bot";
+"~^/GPT-3\?.*$" "/gpt-3";
+"~^/gpt-2-sampling.*$" "/gpt-2#improvements";
+"~^/fiction/The-Mulberry-Tree.*$" "/fiction/mulberry";
+"~^/doc/statistics/.*/favicon.ico.*$" "/static/img/favicon.png";
+"~^/doc/statistics/1961-raiffa-appliedstatisticaldecisiontheory.pdf.*$" "/doc/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pdf";
+"~^/doc/spacedrepet$" "/doc/spaced-repetition/index";
+"~^/doc/.*/Against-The-Miletians.*$" "/Against-The-Miletians";
+"~^/doc/psychology/newsletter/$" "/doc/newsletter/index";
+"~^/doc/personal/2011-gwern-yourmorals.org/current_events_process$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.html";
+"~^/doc/-melatonin/2014-boergers.pdf.*$" "/doc-melatonin/2014-boergers.pdf";
+"~^/doc/genetics/heritable/1984-buss$" "/doc/genetics/heritable/1984-buss-temperamentearlydevelopingpersonalitytraits.pdf";
+"~^/doc/genetics/2017-owers.pdf.*$" "/doc/genetics/selection/2017-owers.pdf";
+"~^/doc/genetics/2017-cohen.pdf.*$" "/doc/genetics/selection/2017-cohen.pdf";
+"~^/doc/genetics/2016-sekar.pdf.*$" "/doc/genetics/editing/2016-sekar.pdf";
+"~^/doc/genetics/2016-day.pdf.*$" "/doc/genetics/heritable/correlation/mendelian-randomization/2016-day.pdf";
+"~^/doc/genetics/2014-arnedo.pdf.*$" "/doc/genetics/heritable/2014-arnedo.pdf";
+"~^/doc/dnb/2007-mccmorris-1.pdf.*$" "/doc/creatine/2007-mcmorris-1.pdf";
+"~^/doc/dnb/2007-kyzas.pdf.*$" "/doc/statistics/bias/2007-kyzas.pdf";
+"~^/doc/culture/2010-d$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/2009-anonymous-deathnotescript.pdf.*$" "/doc/anime/2009-anonymous-deathnotescript.pdf";
+"~^/doc/1996-nelson.pdf.*$" "/doc/biology/1996-nelson.pdf";
+"~^/tanks.page$" "/tank.page";
+"~^/[Ee]ssays$" "/index";
+"~^/TWDNE\?.*$" "/twdne";
+"~^/humans.txt.*$" "/me";
+"~^/doc/psychology/.*/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/doc/anime/.*favicon.ico.*$" "/static/img/favicon.ico";
+"~^/static/img/logo/logo-favicon-appletouch.png/static/img/logo/logo-favicon-appletouch.png.*$" "/static/img/logo/logo-favicon-appletouch.png";
+"~^/.../selection/2018-schlebusch.pdf.*$" "/doc/genetics/selection/2018-schlebusch.pdf";
+"~^/GPT-2-Art.*$" "/gpt-2";
+"~^/Iodine\?.*$" "/iodine";
+"~^/godbet789.*$" "/static/404";
+"~^/GAN-image-editing.*$" "/face#reversing-stylegan-to-control-modify-images";
+"~^/eva/1996-newtype-anno-interview.*$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/sociology/2003-murray$" "/doc/sociology/2003-murray.pdf";
+"~^/doc/genetics/2016-kang.pdf.*$" "/doc/genetics/editing/2016-kang.pdf";
+"~^/doc/economics/2009-friedman$" "/doc/economics/2009-friedman-seasteadingapracticalguide.pdf";
+"~^/doc/2013-kidd.pdf.*$" "/doc/culture/2013-kidd.pdf";
+"~^/doc/2007-greene.pdf.*$" "/doc/philosophy/ethics/2007-greene.pdf";
+"~^/doc/2005-little-boy.*$" "/doc/anime/eva/little-boy/2005-little-boy";
+"~^/danbooru2020.page.*$" "/danbooru2021.page";
+"~^/Blackmail\?.*$" "/blackmail";
+"~^/Zeo\?.*$" "/zeo/zeo";
+"~^/zeo/location.href.*$" "/zeo/index";
+"~^/zeo/CO2\?.*$" "/zeo/co2";
+"~^/Wikipedia-and-YouTube/$" "/wikipedia-and-youtube";
+"~^/Timing\?.*$" "/timing";
+"~^/stati$" "/static/";
+"~^/Scaling-hypothesis\?.*$" "/scaling-hypothesis";
+"~^/review/MLP.*$" "/review/mlp";
+"~^/Nicotine\?.*$" "/nicotine";
+"~^/Morning-writing\?.*$" "/morning-writing";
+"~^/methylphenidate.*$" "https://en.wikipedia.org/wiki/Methylphenidate";
+"~^/Lorem.page.*$" "/lorem.page";
+"~^/Lorem-7.*$" "/lorem";
+"~^/Littlewood\?.*$" "/littlewood";
+"~^/Improvements.*" "/improvement";
+"~^/Improvement$" "/improvement";
+"~^/home$" "/index";
+"~^/[Gg]wern$" "/index";
+"~^/Embryo-editing\?.*$" "/embryo-editing";
+"~^/Everything.*$" "/everything";
+"~^/order$" "/order-statistics";
+"~^/_search.*$" "https://www.google.com/search?q=site%3Agwern%2Enet";
+"~^/Tool-AIs.*$" "/tool-ai";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
