--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5059,3 +5059,4 @@ default "";
 "~^/doc/iq/2020-zissman.pdf.*$" "/doc/iq/ses/2020-zissman.pdf";
 "~^/tanks$" "/tank";
 "~^/doc/ai/nn/adversarial/2019-bashivan.pdf.*$" "/doc/ai/nn/adversarial/human/2019-bashivan.pdf";
+"~^/static/build/gwsed$" "/static/build/gwsed.sh";
