--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10080,6 +10080,10 @@
 "~^/order$" "/order-statistics";
 "~^/_search.*$" "https://www.google.com/search?q=site%3Agwern%2Enet";
 "~^/Tool-AIs.*$" "/tool-ai";
+"~^/doc/1982-nungester.pdf.*$" "/doc/psychology/spaced-repetition/1982-nungester.pdf";
+"~^/doc/japan/2009-carter.pdf.*$" "/doc/japan/poetry/shotetsu/1999-carter.pdf";
+"~^/Lorem-9$" "/lorem#9";
+"~^/Sunk-cost\?.*$" "/sunk-cost";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -15195,6 +15199,22 @@
 "~^/.*/ghost/.*$"  "/static/404";
 "~^/.*httptrace.*$"  "/static/404";
 "~^/.*host\.key.*$"  "/static/404";
+"~^/islamicforex.*$"  "/static/404";
+"~^/.*/packmgr.*$"  "/static/404";
+"~^/crx/.*$"  "/static/404";
+"~^/[Mm]odules?/.*$"  "/static/404";
+"~^/[Mm]od/.*$"  "/static/404";
+"~^/nagios/.*$"  "/static/404";
+"~^/sfsites/.*$"  "/static/404";
+"~^/opensis/.*$"  "/static/404";
+"~^/content/.*$"  "/static/404";
+"~^/db/.*$"  "/static/404";
+"~^/ecp/.*$"  "/static/404";
+"~^/php-cgi/.*$"  "/static/404";
+"~^/xxl-job.*$"  "/static/404";
+"~^/host/.*$"  "/static/404";
+"~^/breastfeeding.*$"  "/static/404";
+"~^/monitor-.*/.*$"  "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
