rename swiss spiral roll to correct the spelling now that it's enabled

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5060,3 +5060,5 @@ default "";
 "~^/tanks$" "/tank";
 "~^/doc/ai/nn/adversarial/2019-bashivan.pdf.*$" "/doc/ai/nn/adversarial/human/2019-bashivan.pdf";
 "~^/static/build/gwsed$" "/static/build/gwsed.sh";
+"~^/img/icon/swisspiralroll-stretch.svg.*$" "/img/icon/swissspiralroll.svg";
+"~^/img/icon/swisspiralroll.svg" "/img/icon/swissspiralroll.svg";
