--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -38,7 +38,7 @@ server {
      location / {
 
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
-        location /doc/www/               { add_header X-Robots-Tag "none, nosnippet, noarchive, nocache"; }
+        location /doc/www/               { add_header X-Robots-Tag "none, nosnippet, noarchive, nocache"; ssi off; }
         # repeat robots.txt's major rules, because Google Search appears to ignore it:
         location /metadata/               { add_header X-Robots-Tag "none, nosnippet, noarchive, nocache"; }
 
@@ -751,6 +751,7 @@ server {
         rewrite ^/doc/cat/tartarian-honeysuckle/(?<old>.*)$ /doc/cat/tatarian-honeysuckle/$old permanent;
         rewrite ^/(?<old>.*)/null$ /$old/index permanent;
         rewrite ^/(?<old>doc/.*)/null.*$ /$old/index permanent;
+        rewrite ^/(?<old>.*)．$ /$old permanent;
 
         rewrite ^/image/otakutalk/(?<old>.*)$ /image/eva/otaku-talk/$old permanent;
         rewrite ^/image/storyofyourlife/(?<old>.*)$ /image/story-of-your-life/$old permanent;
@@ -779,6 +780,7 @@ server {
         rewrite ^/(?<old>.*)%3C/p$ /$old permanent;
         rewrite ^/(?<prefix>.*)%23(?<suffix>.*)$ /$prefix permanent; # strip 'foo.pdf#bar' encoded into the URL
         rewrite ^/(?<prefix>.*)\&quot.*$ /$prefix permanent;
+        rewrite ^/(?<prefix>.*)\&embed.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)-https:.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)-http:.*$ /$prefix permanent;
         rewrite ^/(?<prefix>.*)https:.*$ /$prefix permanent;
