--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8971,11 +8971,11 @@
 "~^/static/css/dark-mode.css.html.html$" "/static/css/dark-mode.css.html";
 "~^//static/css/default.css/.php$"  "/static/css/default.css";
 "~^/default.css$" "/static/css/default.css";
-"~^/[a-zA-Z]+/static/css/default.css.*.*$" "/static/css/default.css.*";
+"~^/[a-zA-Z]+/static/css/default.css.*$" "/static/css/default.css.*";
 "~^/static/css/default.css.html.html$" "/static/css/default.css.html";
 "~^/static/css/default$" "/static/css/default.hs";
 "~^/drop-caps-de-zs.css$" "/static/css/fonts.css";
-"~^/[a-zA-Z]+/static/css/fonts.css.*.*$" "/static/css/fonts.css.*";
+"~^/[a-zA-Z]+/static/css/fonts.css.*$" "/static/css/fonts.css.*";
 "~^/static/css/fonts.css.html.html$" "/static/css/fonts.css.html";
 "~^/static/css/fonts-versioned.css.html.*$" "/static/css/fonts-VERSIONED.css.html";
 "~^/static/css/colors.css$" "/static/css/include/colors.css";
@@ -8987,7 +8987,7 @@
 "~^/initial.css$" "/static/css/include/initial.css";
 "~^/static/css/initial.css.html.*$" "/static/css/include/initial.css.html";
 "~^/links.css$" "/static/css/links.css";
-"~^/[a-zA-Z]+/static/css/links.css.*.*$" "/static/css/links.css.*";
+"~^/[a-zA-Z]+/static/css/links.css.*$" "/static/css/links.css.*";
 "~^/static/css/links.css.html.html$" "/static/css/links.css.html";
 "~^/static/css/image-focus.css.*$" "/static/css/old/image-focus.css";
 "~^/static/FontAwesome.css.*$" "/static/css/other/FontAwesome.css";
@@ -10084,6 +10084,35 @@
 "~^/doc/japan/2009-carter.pdf.*$" "/doc/japan/poetry/shotetsu/1999-carter.pdf";
 "~^/Lorem-9$" "/lorem#9";
 "~^/Sunk-cost\?.*$" "/sunk-cost";
+"~^/doc/genetics/heritable/1986-plomin-the-study-of-temperament.pdf.*$" "/doc/genetics/heritable/1986-plomin-thestudyoftemperament.pdf";
+"~^/doc/genetics/2016-okbay.pdf.*$" "/doc/genetics/heritable/correlation/2016-okbay.pdf";
+"~^/doc/1999-murphy.pdf.*$" "/doc/philosophy/ethics/1999-murphy.pdf";
+"~^/doc/schizophrenia/rosenhan/2023-scull.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/2023-scull.pdf";
+"~^/GPT-2-Art.*$" "/gpt-2";
+"~^/DALL-E/index.*$" "/doc/ai/nn/transformer/gpt/dall-e/index";
+"~^/chatgpt$" "https://openai.com/blog/chatgpt/";
+"~^/mugging-DP.*$" "/mugging-dp";
+"~^/nootropics$" "/nootropic/nootropic";
+"~^/Everything.*$" "/everything";
+"~^/GPT-3-creative-writing.*$" "/gpt-3";
+"~^/doc/rotten.com/lib$" "/doc/rotten.com/library/index.html";
+"~^/doc/ai/poetry/1974-lem-cyberiad-trurlselectronicbard$" "/doc/ai/poetry/1974-lem-cyberiad-trurlselectronicbard.pdf";
+"~^/static/old/links.js.html.*$" "/static/js/old/links.js.html";
+"~^/self-decrypting-file$" "/self-decrypting";
+"~^/doc/genetics/selection/1983-bennett$" "/doc/genetics/selection/1983-bennett-naturalselectionheredityandeugenics.pdf";
+"~^/Silk%25$" "/silk-road";
+"~^/notes.page.*$" "/note/note.page";
+"~^/doc/statistics/2008-falk.pdf.*$" "/doc/statistics/bias/2008-falk.pdf";
+"~^/image/design/2023-03-05-wikipedia-monobookskin-externallinkiconsdemonstration.pn$" "/image/design/2023-03-05-wikipedia-monobookskin-externallinkiconsdemonstration.png";
+"~^/doc/fiction/science-fiction/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/dNM-survival$" "/dnm-survival";
+"~^/death-Note-script$" "/death-note-script";
+"~^/23andMe.page.*$" "/23andme.page";
+"~^/index.do.*$" "/index";
+"~^/Help$" "/design";
+"~^/doc/1957-shockley.pdf.*$" "/doc/iq/ses/1957-shockley.pdf";
+"~^/doc/ai/2020-brown.pdf.*$" "https://arxiv.org/abs/2005.14165#openai";
+"~^/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158$" "/doc/www/s3-us-west-2.amazonaws.com/d73fdc5ffa8627bce44dcda2fc012da638ffb158.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -10115,7 +10144,7 @@
 "~^/%EF%BF%BD%EF%BF%BD%EF%BF%BD%EF%BF%BD.*$" "/static/404";
 "~^/-[0-9]+\.[0-9]+em$" "/static/404";
 "~^/.*%27testing-xss5%27.*$" "/static/404";
-"~^/.*%2Fbuy%2Fhcg%2F.*.*$" "/static/404";
+"~^/.*%2Fbuy%2Fhcg%2F.*$" "/static/404";
 "~^/.*-EXTRACTVALUE\(.*$" "/static/404";
 "~^/.*-revealButtonHref.*$" "/static/404";
 "~^/.*/%28options.location.*$" "/static/404";
@@ -10160,7 +10189,7 @@
 "~^/.*Btarget.dataset.*$" "/static/404";
 "~^/.*CLIENT_EVENT_ENDPOINT.*$" "/static/404";
 "~^/.*Cpanel.*$" "/index";
-"~^/.*HelloThinkPHP.*.*$" "/static/404";
+"~^/.*HelloThinkPHP.*$" "/static/404";
 "~^/.*Lenovo.*/.*$" "/static/404";
 "~^/.*MEDICAL_CONTEXT.*$" "/static/404";
 "~^/.*OR-SLEEP.*$" "/static/404";
@@ -10188,11 +10217,11 @@
 "~^/.*fenixshell.php.*$" "/static/404";
 "~^/.*https\:\/\/gwern\.sql.*$" "/static/404";
 "~^/.*invokefunction.*$" "/static/404";
-"~^/.*invokefunction.*.*$" "/static/404";
+"~^/.*invokefunction.*$" "/static/404";
 "~^/.*jdni.*ldap.*$" "/static/404"; # log4js vuln scanners
 "~^/.*jndi:ldap.*$" "/static/404";
 "~^/.*kingluca88.com.*$" "/static/404";
-"~^/.*linear-gradient.*.*$" "/static/404";
+"~^/.*linear-gradient.*$" "/static/404";
 "~^/.*pdfjs-dist/.*$" "/static/404";
 "~^/.*px.gif.*$" "/static/404";
 "~^/.*robots.txt.php.*$" "/static/404";
@@ -11635,7 +11664,7 @@
 "~^/docker.*$" "/static/404";
 "~^/doc/.*/\!W$" "/static/404";
 "~^/doc/.*tracemonkey-pldi.*$" "/static/404";
-"~^/doc/.*www.googletagmanager.com/.*.*$" "/static/404";
+"~^/doc/.*www.googletagmanager.com/.*$" "/static/404";
 "~^/doc/Admag.com/.*$" "/static/404";
 "~^/doc/CGI/guestbook?page=1.*$" "/index";
 "~^/doc/Guestbook.php.*$" "/index";
@@ -15215,6 +15244,55 @@
 "~^/host/.*$"  "/static/404";
 "~^/breastfeeding.*$"  "/static/404";
 "~^/monitor-.*/.*$"  "/static/404";
+"~^/.*win\.ini.*$"  "/static/404";
+"~^/.*tiki-ajax.*$"  "/static/404";
+"~^/.*document\.domain.*$"  "/static/404";
+"~^/svg/.*$"  "/static/404";
+"~^/orders.*$"  "/static/404";
+"~^/names.NSF.*$"  "/static/404";
+"~^/my\.ppk.*$"  "/static/404";
+"~^/Monthly.*$"  "/static/404";
+"~^/mifs.*$"  "/static/404";
+"~^/message.*$"  "/static/404";
+"~^/monitorix.*$"  "/static/404";
+"~^/LWA.*$"  "/static/404";
+"~^/logo/.*$"  "/static/404";
+"~^/jolokai.*$"  "/static/404";
+"~^/ghost/.*$"  "/static/404";
+"~^/%ff.*$"  "/static/404";
+"~^/en-US/.*$"  "/static/404";
+"~^/elmah.axd.*$"  "/static/404";
+"~^/DesktopModule.*$"  "/static/404";
+"~^/descriptorByName.*$"  "/static/404";
+"~^/\+CSCOT\+.*$"  "/static/404";
+"~^/mem/.*$"  "/static/404";
+"~^/test\?.*$"  "/static/404";
+"~^/q\?start.*$"  "/static/404";
+"~^/.*getMethod.*$"  "/static/404";
+"~^/Items/.*$"  "/static/404";
+"~^/.*/RemoteSearch/.*$"  "/static/404";
+"~^/.*/linkredir.cfm.*$"  "/static/404";
+"~^/.*kidsmonitor.io.*$"  "/static/404";
+"~^/.*muk-hunter.com.*$"  "/static/404";
+"~^/.*mr-bae.com.*$"  "/static/404";
+"~^/.*/makeup/.*$"  "/static/404";
+"~^/.*shell\?.*$"  "/static/404";
+"~^/.*cd\+/tmp.*$"  "/static/404";
+"~^/.*botbet.catbbos.fun.*$"  "/static/404";
+"~^/.*package-lock.*$"  "/static/404";
+"~^/.*/soso-shoes.com.*$"  "/static/404";
+"~^/.*godbet789.*$"  "/static/404";
+"~^/m.cambridgenow.ca/linkredir.cfm.*$"  "/static/404";
+"~^/max_t._o.*$"  "/static/404";
+"~^/.*/wp-content/.*$"  "/static/404";
+"~^/.*/plugins.*php.*$"  "/static/404";
+"~^/.*/php-event-calendar.*$"  "/static/404";
+"~^/.*/dzs-zoomsounds.*$"  "/static/404";
+"~^/.*/admin/upload/wp.php.*$"  "/static/404";
+"~^/.*/wp.php.*$"  "/static/404";
+"~^/cb\=[0-9]+.*$"  "/static/404";
+"~^/careers_search_index.*$"  "/static/404";
+"~^/.*bokepdella.*$"  "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
